--- a/Lab_5/Lab_5.csproj
+++ b/Lab_5/Lab_5.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaseUtensilCreator.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -56,9 +57,13 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utensils\Cup.cs" />
     <Compile Include="Utensils\Pan.cs" />
-    <Compile Include="Utensils\Sreamer.cs" />
+    <Compile Include="Utensils\Steamer.cs" />
     <Compile Include="Utensils\Tureen.cs" />
     <Compile Include="Utensils\Utensil.cs" />
+    <Compile Include="UtilsCreators.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
